fixes css file to use image-url function so that image links don't break in production

--- a/app/assets/stylesheets/style.scss
+++ b/app/assets/stylesheets/style.scss
@@ -82,7 +82,7 @@ ul, ol {
   font-size: 22px;
   color: #fff;
   font-weight: 600;
-  background-image: url('logo-icon.png');
+  background-image: image-url('logo-icon.png');
   background-position: left center;
   background-repeat: no-repeat;
   padding-left: 34px;
@@ -120,7 +120,7 @@ ul, ol {
 }
 /* Home Style */
 header {
-  background: url('header-bg.jpg') no-repeat bottom center;
+  background: image-url('header-bg.jpg') no-repeat bottom center;
   background-size: cover;
   color: #cfcfcf;
   position: relative;
@@ -474,7 +474,7 @@ filter: progid:DXImageTransform.Microsoft.gradient( startColorstr='#ffffff', end
 /* Testimonials Section */
 #testimonials-section {
   padding: 100px 0 60px 0;
-  background: url('testimonials-bg.jpg');
+  background: image-url('testimonials-bg.jpg');
   background-size: cover;
   background-attachment: fixed;
 }
